[tool.poetry]
name = "services_bypass"
version = "0.1.0"
description = ""
authors = ["h2magic <h2magic@126.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
celery = {extras = ["redis"], version = "^5.2.7"}
python-dotenv = "^0.20.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.13.0"
redis = "^4.3.4"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
